# remote_executor_mcp

./: .gitignore  CLAUDE.md  README.md  opencode.json.example  pyproject.toml  remote-executor.yaml.example  setup.sh
opencode/skills/remote-dev/: SKILL.en.md  SKILL.md
src/remote_executor_mcp/: __init__.py  __main__.py  config.py  executor.py  models.py  sandbox.py  server.py  transport.py
