[project]
name = "remote-executor-mcp"
version = "1.0.0"
description = "MCP server bridging AI agents (Claude Code, OpenCode, etc.) to remote Linux servers via SSH"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "heanhan"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
remote-executor-mcp = "remote_executor_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
